# Fluid

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  SESSION_CHECKPOINT.md  start.bat  需求文档.md
.github/workflows/: release.yml
crates/fluid-server/: Cargo.toml  build.rs
crates/fluid-server/src/: cache_store.rs  context_assembler.rs  graph_loader.rs  llm_proxy.rs  main.rs  project_reader.rs  routes.rs  settings.rs  static_assets.rs  translate.rs
docs/: 代码链路.md  切片计划.md  技术方案.md  需求文档修订清单.md
docs/adr/: 0001-交付载体-自研网页IDE.md  0002-文件为原子单元-放弃三级惰性链.md  0003-生成产物落盘旁路缓存.md  0004-按函数流式生成-文件函数清单作共享上下文.md  0005-自带AST解析-首阶段Python与Rust.md  0006-追问上下文分层装配与超窗降级.md  0007-跨文件上下文-默认摘要-破例临时取源.md  0008-生成调度与大文件视口渐进降级.md  0008-追问答案-markdown-latex-渲染.md  0009-tree-sitter浏览器端解析.md  0010-部署拓扑-本地后端加浏览器前端.md  0011-understand-anything降为可选增强.md  0012-前端编辑器内核-CodeMirror6.md  0013-后端语言-Rust.md  0014-前端框架-Vue3.md  0015-前端壳-类VSCode界面.md  0016-代码阅读区右栏对齐注释.md  0017-追问降级后按需追源-两段式规划.md  0018-运行时配置LLM后端-密钥write-only-回写env.md
scripts/: install.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: fuzzy-check.ts  markdown-check.ts  parse-check.ts  query-context-check.ts  scheduler-check.ts
web/src/: App.vue  Editor.vue  FileTree.vue  MarkdownView.vue  QueryPanel.vue  TreeNode.vue  api.ts  ghostStore.ts  ghostTypes.ts  katex-auto-render.d.ts  main.ts  queryContext.ts  scheduler.ts  styles.css  theme.ts  tree.ts
web/src/parser/: browser.ts  index.ts  parse.ts  types.ts
web/src/parser/keyline-queries/: python.scm  rust.scm  typescript.scm
web/src/render/: capsuleWidget.ts  ghostField.ts  gutter.ts  lineWidget.ts  markdown.ts  markdownDoc.ts  placeholderWidget.ts
web/src/shell/: ActivityBar.vue  CommandPalette.vue  SettingsModal.vue  StatusBar.vue  Tabs.vue  fuzzy.ts
