[package]
name = "fluid-server"
version = "0.1.0"
edition = "2021"
description = "Fluid local backend: file IO + (later) LLM proxy + cache. S1 = skeleton + file tree."

[[bin]]
name = "fluid"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
