[package]
name = "fluid-server"
version = "0.1.0"
edition = "2021"
description = "Fluid local backend: file IO + (later) LLM proxy + cache. S1 = skeleton + file tree."

[[bin]]
name = "fluid"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
encoding_rs = "0.8"
# LLM proxy (S6): OpenAI-compatible HTTP. rustls to avoid a system OpenSSL dep on Windows.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Loads .env (LLM config) into the process env at startup; real env vars win.
dotenvy = "0.15"
