[package]
name = "fluid-server"
version = "0.1.0"
edition = "2021"
description = "Fluid local backend: file IO + (later) LLM proxy + cache. S1 = skeleton + file tree."

[[bin]]
name = "fluid"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
encoding_rs = "0.8"
# LLM proxy (S6): OpenAI-compatible HTTP. rustls to avoid a system OpenSSL dep on Windows.
# `stream` enables `bytes_stream()` for SSE token streaming (S10a /api/query).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# StreamExt::next over reqwest's byte stream (S10a streaming).
futures-util = { version = "0.3", default-features = false }
# Loads .env (LLM config) into the process env at startup; real env vars win.
dotenvy = "0.15"
# Native OS folder picker for Open Folder (U3 revision). The local backend pops
# the dialog (browser can't hand a server-side absolute path to the backend).
rfd = "0.15"
# Embed the built frontend (web/dist) into the binary so one `fluid` binary is the
# whole app — no Vite/Node at runtime (packaging). Debug reads from disk; release bakes in.
rust-embed = "8"
# Content-Type for embedded assets (js/css/wasm/html) served via the SPA fallback.
mime_guess = "2"
# Best-effort: open the default browser at the served URL on startup.
open = "5"
